sidebar posiiton fixed and setting alignments and heights

--- a/adminlte-clone/custom.css
+++ b/adminlte-clone/custom.css
@@ -5,9 +5,17 @@
     box-sizing: border-box;
 }
 
+.wraper{
+    max-width: 100vw;
+    position: absolute;
+}
+.wraper .row{
+}
+
 .transition{
     transition: all .35s ease-in-out;
 }
+
 .box a.nav-link{
     color: #fff;
 }
@@ -24,7 +32,23 @@
     width: 246px;
     /* width: 75px; */
     background: #343a40;
+    position: absolute;
+    min-height: 100vh;
+
 }
+
+.sidebar:hover{
+    width: 246px;
+    position: absolute;
+    z-index: 1000;
+    height: auto;
+    min-height: 100vh;
+
+
+}
+/* #sidebar{
+    overflow-y: scroll;
+} */
 .span{
     display: block;
 }
@@ -37,7 +61,9 @@
 #inner-sidebar .sidebar-header{
     height: 57px;
     border-bottom: 1px solid #454d55;
+
 }
+
 #user-profile{
     height: 66px;
     border-bottom: 1px solid #454d55;
@@ -71,6 +97,14 @@
 }
 
 /* ------------------------ */
+.main{
+    /* position: absolute; */
+    /* left: 246px; */
+    margin-left: 246px;
+    transition: margin-left .35s ease-in-out;
+    width: 100%;
+    min-height: 100vh;
+}
 #navbar{
     height: 57px;
 }
